# tcc

./: CMakeLists.txt  config.h.in  dist.info
win32/: build-tcc.bat
